--- a/style.css
+++ b/style.css
@@ -10,6 +10,23 @@ body {
   background-color: #f6fbff;
 }
 
+.scroll__btn {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  display: none;
+  background: none;
+  border: none;
+}
+
+.scroll__btn__image {
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+  cursor: pointer;
+  transform: rotate(180deg);
+}
+
 .header {
   position: relative;
   display: flex;
